Docker compose and Nginx is working, still need to connect FE with BE

--- a/cybria-FE/cybria.conf
+++ b/cybria-FE/cybria.conf
@@ -3,3 +3,41 @@ worker_processes  1;
 
 error_log  /var/log/nginx/error.log debug;
 pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
+
+# Specify the 'http' context
+http {
+    # include       /etc/nginx/mime.types;
+    # default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    include /usr/local/etc/nginx/sites-enabled/*;
+
+
+    # upstream backend {
+    #     ip_hash;
+    #     server backend:8005;
+    # }
+
+    server {
+        
+
+        listen 80;  # NGINX listens on port 80
+
+        
+
+        # Location for serving the Angular frontend
+        location / {
+            root /usr/share/nginx/html;  # Root directory for static files
+            index index.html;  # Default file to serve
+            try_files $uri $uri/ index.html;  # Handles routing within the Angular app
+        }
+
+        # Location for proxying requests to the FastAPI backend
+        # location backend {
+        #     proxy_pass http://backend:8005/;  # Replace with your FastAPI backend address
+        # }
+    }
+}
